src/objects/E2_Milestone_Library__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Provides details of the template created .</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Marks a template active or inactive .If active then it is available for use to the E2 users .</description>
        <inlineHelpText>If active ,then that template is available made available for use in E2 system else not .</inlineHelpText>
        <label>Is_Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the practice for which the milestone template can be used for .</description>
        <inlineHelpText>Defines the practice for which the milestone template can be used for .For instance, SFDC,Workday etc.</inlineHelpText>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Milestone Library</relationshipLabel>
        <relationshipName>Milestone_Library</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Milestone Library</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Library Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Library</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>